--- a/src/HaCForm.css
+++ b/src/HaCForm.css
@@ -18,7 +18,6 @@
 }
 
 .HaCForm input[type=checkbox]:focus, .HaCForm input[type=radio]:focus {
-  /* Very naughty, but we're not interested in accessibility here */
   outline: none;
 }
 
@@ -41,8 +40,8 @@
 }
 
 .HaCForm input[type=checkbox]:checked {
-  background-color: #16AA54;
-  border-color: #174B2D;
+  background-color: #28a745;
+  border-color: #1D7E32;
 }
 
 .HaCForm input[type=radio] {
@@ -50,8 +49,8 @@
 }
 
 .HaCForm input[type=radio]:checked {
-  background-color: #2445A1;
-  border-color: #13203F;
+  background-color: #007bff;
+  border-color: #0463C9;
 }
 
 .HaCForm .form-check {
