--- a/src/PhotoStream.css
+++ b/src/PhotoStream.css
@@ -32,3 +32,9 @@
   background-size: contain;
 }
 
+.PhotoStream__logo {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  width: 20rem;
+}
